# mcp-zakupki

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml  server.json
.github/workflows/: ci.yml  publish-mcp.yml
src/mcp_zakupki/: __init__.py  byok_limit.py  cache.py  config.py  context.py  errors.py  hosted_client.py  schemas.py  server.py  tier.py  validators.py
src/mcp_zakupki/data/: __init__.py  okpd2_seed.json
src/mcp_zakupki/providers/: __init__.py  base.py  damia.py  gosplan.py  html_fallback.py  http_client.py  navodki.py  resolver.py
src/mcp_zakupki/tools/: __init__.py  get_customer_history.py  get_supplier_stats.py  get_tender.py  lookup_okpd2.py  search_tenders.py
tests/: conftest.py  test_cache.py  test_cli.py  test_lookup_okpd2.py  test_providers.py  test_schemas.py  test_search_tenders_tool.py  test_server_smoke.py  test_tier.py  test_validators.py
